--- a/proyecto1.html
+++ b/proyecto1.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estiloscss" />
+    <link rel="stylesheet" href="estilos/estilos.css" />
     <title>El titulo del post</title>
 </head>
 <body>
-    <div id="container"><div id="post">
+    <div id="container">
+    <div id="post">
     <h1>Aquí vamos a hacer un blogpost</h1>
     <p>Este es el parrafo de inicio</p>
 </body>
