--- a/proyecto1.html
+++ b/proyecto1.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="container">
+    <div id="cabecera">
+        Cabecera
+    </div>    
     <div id="post">
     <h1>Aquí vamos a hacer un blogpost</h1>
     <p>Este es el parrafo de inicio</p>
